--- a/AdaGrad, RMSProp and Adam.ipynb
+++ b/AdaGrad, RMSProp and Adam.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AdaGrad Optimization"
+    "After 100 epochs, accuracy for the following are:<br>\n",
+    "AdaGrad - 0.7<br>\n",
+    "RMSProp - 0.725 (Heighest - 0.81)<br>\n",
+    "Adam - 0.94"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AdaGrad Optimization\n",
+    "Extension of SGD. Decay's the learning rate over time. <br> \n",
+    "Hyperparameters: <br>\n",
+    "lr - learning rate <br>\n",
+    "eps - epsilon - default value is e**-7"
    ]
   },
   {
@@ -289,7 +303,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RMSProp Optimization"
+    "# RMSProp Optimization\n",
+    "Extension of AdaGrad. Uses Exponential Moving Average of second order gradients instead of Cummulative Sum of second order gradients.<br> \n",
+    "Hyperparameters: <br>\n",
+    "lr - learning rate <br>\n",
+    "d - decay (learning rate) <br>\n",
+    "eps - epsilon - default value is e**-6"
    ]
   },
   {
@@ -774,7 +793,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adam Optimization"
+    "# Adam Optimization\n",
+    "Combination of Momentum and RMSProp. <br>\n",
+    "Hyperparameters: <br>\n",
+    "lr - learning rate <br>\n",
+    "m - momentum (also called beta1, first order gradient parameter) <br>\n",
+    "d - decay (also called beta2, second order gradient parameter) <br>\n",
+    "eps - epsilon - default value is e**-8"
    ]
   },
   {
