--- a/Nestrov's Accelerated Momentum.ipynb
+++ b/Nestrov's Accelerated Momentum.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nestrov's Accelerated Momentum\n",
+    "Extension of SGD. Momentum is used to stabilize learning process. <br> \n",
+    "Hyperparameters: <br>\n",
+    "lr - learning rate <br>\n",
+    "m - momentum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -51,6 +62,13 @@
     "\n",
     "y_train = one_hot_encoded(y_train)\n",
     "y_test = one_hot_encoded(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NAM is equivalent to SGD, if m=0 "
    ]
   },
   {
@@ -479,6 +497,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In NAM, 0.9<=m<=0.999"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -901,6 +926,15 @@
    ],
    "source": [
     "model.train(X_train, y_train, 100, batch_size=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When m=0(SGD), 90% accuracy is reached in 61st iteration. <br>\n",
+    "Using momentum, 90% accuracy is reached in 18th. <br>\n",
+    "Hence, NAM converges faster"
    ]
   }
  ],
